--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "stream": "^0.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "crypto": "npm:crypto-browserify",
+    "stream": "npm:stream-browserify"
   },
   "browser": {
     "crypto": false
